force-app/main/default/objects/Country_Product_Category_Mapping__c/Country_Product_Category_Mapping__c.object-meta.xml
<CustomObject>
    <label>Country - Product Category Mapping</label>
    <nameField>
        <displayFormat>Category Mapping -{00000}</displayFormat>
        <label>Country - Product Category Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country - Product Category Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>