force-app/main/default/objects/Country_Product_Category_Mapping__c/fields/Country_Region_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Country_Region_Mapping__c</fullName>
    <label>Country - Region Mapping</label>
    <referenceTo>Country_Region_BM_Entity_Mapping__c</referenceTo>
    <relationshipLabel>Country - Product Category Mappings</relationshipLabel>
    <relationshipName>Country_Product_Category_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>