force-app/main/default/objects/Country_Product_Category_Mapping__c/fields/Fees_Approver__c.field-meta.xml
<CustomField>
    <fullName>Fees_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fees Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Country_Product_Category_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>