force-app/main/default/objects/Country_Product_Category_Mapping__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Category</valueSetName>
    </valueSet>
</CustomField>